--- a/src/configure.in
+++ b/src/configure.in
@@ -845,6 +845,8 @@ AC_TRY_LINK([
 #if defined(SVR4) && !defined(DGUX)
 #include <utmpx.h>
 #define utmp utmpx
+#define pututline pututxline
+#define getutent getutxent
 #else
 #include <utmp.h>
 #endif
@@ -862,6 +864,8 @@ AC_TRY_LINK([
 #if defined(SVR4) && !defined(DGUX)
 #include <utmpx.h>
 #define utmp utmpx
+#define pututline pututxline
+#define getutent getutxent
 #else
 #include <utmp.h>
 #endif
@@ -878,6 +882,8 @@ AC_TRY_COMPILE([
 #if defined(SVR4) && !defined(DGUX)
 #include <utmpx.h>
 #define utmp utmpx
+#define pututline pututxline
+#define getutent getutxent
 #else
 #include <utmp.h>
 #endif
